--- a/index.html
+++ b/index.html
@@ -10,6 +10,76 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+    <main>
+        <header id="header">
+            <h1>
+                <i class="fab fa-firstdraft"></i>
+                DCODELAB
+            </h1>
+            <address>
+                2021 DECODELAB<br> ALL RIGHT RESERVED.
+            </address>
+        </header>
+        <nav id="nav">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="far fa-envelope"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fas fa-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <section id="section">
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>01</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.1</p>
+                    </div>
+                    <div class="pic">
+                        <video src="vids/vid1.mp4"></video>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>02</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.2</p>
+                    </div>
+                    <div class="pic">
+                        <video src="vids/vid2.mp4"></video>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>03</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.3</p>
+                    </div>
+                    <div class="pic">
+                        <video src="vids/vid3.mp4"></video>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>04</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.4</p>
+                    </div>
+                    <div class="pic">
+                        <video src="vids/vid4.mp4"></video>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
