상세페이지 추가

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                 </div>
             </article>
         </section>
+        <aside id="aside">
+            <div class="txt">
+                <h1>title</h1>
+                <p>description</p>
+                <a href="#" class="btn">CLOSE</a>
+            </div>
+            <div class="pic">
+                <video src="vids/vid1.mp4"></video>
+            </div>
+        </aside>
     </main>
 </body>
 </html>
